docs(WebGL): WebGL 绘制三角形

--- a/public/public/html/shadow.html
+++ b/public/public/html/shadow.html
@@ -11,10 +11,12 @@
             padding: 0;
             margin: 0;
         }
-        body,html{
+
+        body, html {
             width: 100%;
             height: 100%;
         }
+
         canvas {
             height: 100%;
             width: 100%;
@@ -22,34 +24,143 @@
     </style>
 </head>
 <body>
-<div id="shadow_canvas"></div>
-<canvas id="gl_canvas"></canvas>
+<!--<div id="shadow_canvas"></div>-->
+<canvas id="myGLCanvas"></canvas>
 <script>
   var container, scene, camera, renderer
-    function initData () {
-      container = document.getElementById('shadow_canvas')
-      scene = new THREE.Scene();
-      camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 5000);
-      renderer = new THREE.WebGLRenderer();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      container.appendChild(renderer.domElement)
+
+  function initData () {
+    container = document.getElementById('shadow_canvas')
+    scene = new THREE.Scene()
+    camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 5000)
+    renderer = new THREE.WebGLRenderer()
+    renderer.setSize(window.innerWidth, window.innerHeight)
+    container.appendChild(renderer.domElement)
+  }
+
+  function animate () {
+    requestAnimationFrame(animate)
+    renderer.render(scene, camera)
+  }
+
+  function createGl () {
+    var canvas = document.getElementById('gl_canvas')
+    var gl = canvas.getContext('experimental-webgl')
+    console.log(gl)
+  }
+
+  // createGl()
+  // window.onload = function () {
+  //   initData()
+  //   animate()
+  // }
+
+  var gl
+  var canvas
+  var shaderProgram
+  var vertexBuffer
+
+  function createGLContext (canvas) {
+    var names = ['webgl', 'experimental-webgl']
+    var context = null
+    for (var i = 0; i < names.length; i++) {
+      try {
+        context = canvas.getContext(names[i])
+      } catch (e) {
+      }
+      if (context) {
+        break
+      }
+    }
+    if (context) {
+      context.viewportWidth = canvas.width
+      context.viewportHeight = canvas.height
+    } else {
+      alert('Failed to create WebGL context!')
+    }
+    return context
+  }
+
+  function loadShader (type, shaderSource) {
+    var shader = gl.createShader(type)
+    gl.shaderSource(shader, shaderSource)
+    gl.compileShader(shader)
+
+    if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+      alert('Error compiling shader' + gl.getShaderInfoLog(shader))
+      gl.deleteShader(shader)
+      return null
+    }
+    return shader
+  }
+
+  function setupShaders () {
+    var vertexShaderSource =
+      'attribute vec3 aVertexPosition;                 \n' +
+      'void main() {                                   \n' +
+      '  gl_Position = vec4(aVertexPosition, 1.0);     \n' +
+      '}                                               \n'
+
+    var fragmentShaderSource =
+      'precision mediump float;                    \n' +
+      'void main() {                               \n' +
+      '  gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);  \n' +
+      '}                                           \n'
+
+    var vertexShader = loadShader(gl.VERTEX_SHADER, vertexShaderSource)
+    var fragmentShader = loadShader(gl.FRAGMENT_SHADER, fragmentShaderSource)
+    console.log('shaderProgram', vertexShader, fragmentShader)
+    shaderProgram = gl.createProgram()
+    gl.attachShader(shaderProgram, vertexShader)
+    gl.attachShader(shaderProgram, fragmentShader)
+    gl.linkProgram(shaderProgram)
+
+    if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)) {
+      alert('Failed to setup shaders')
     }
 
-    function animate () {
-      requestAnimationFrame(animate)
-      renderer.render(scene, camera)
-    }
+    gl.useProgram(shaderProgram)
 
-    function createGl () {
-      var canvas = document.getElementById('gl_canvas');
-      var gl = canvas.getContext('experimental-webgl')
-      console.log(gl)
-    }
-    createGl()
-    // window.onload = function () {
-    //   initData()
-    //   animate()
-    // }
+    shaderProgram.vertexPositionAttribute = gl.getAttribLocation(shaderProgram, 'aVertexPosition')
+  }
+
+  function setupBuffers () {
+    vertexBuffer = gl.createBuffer()
+    gl.bindBuffer(gl.ARRAY_BUFFER, vertexBuffer)
+    var triangleVertices = [
+      0.0, 0.5, 0.0,
+      -0.5, -0.5, 0.0,
+      0.5, -0.5, 0.0
+    ]
+    gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(triangleVertices), gl.STATIC_DRAW)
+    vertexBuffer.itemSize = 3
+    vertexBuffer.numberOfItems = 3
+  }
+
+  function draw () {
+    gl.viewport(0, 0, gl.viewportWidth, gl.viewportHeight)
+    gl.clear(gl.COLOR_BUFFER_BIT)
+
+    gl.vertexAttribPointer(shaderProgram.vertexPositionAttribute,
+      vertexBuffer.itemSize, gl.FLOAT, false, 0, 0)
+
+    gl.enableVertexAttribArray(shaderProgram.vertexPositionAttribute)
+
+    gl.drawArrays(gl.TRIANGLES, 0, vertexBuffer.numberOfItems)
+  }
+
+  function startup () {
+    canvas = document.getElementById('myGLCanvas')
+    gl = createGLContext(canvas)
+    setupShaders()
+    setupBuffers()
+    gl.clearColor(0.0, 0.0, 0.0, 1.0)
+    draw()
+  }
+
+  window.onload = function () {
+    startup()
+  }
 </script>
 </body>
 </html>
